k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: housing-api-service
spec:
  type: ClusterIP
  selector:
    app: housing-api
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
